# dg-sagemaker

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  stress-stt.ts  stt.file.ts  stt.microphone.ts  test-all-voices.ts  tsconfig.json  tts.ts
java/: README.md
java/stt/aws-sdk/: README.md  build.gradle  settings.gradle
java/stt/aws-sdk/src/main/java/com/deepgram/loadtest/: SageMakerStreamLoadTest.java  StreamingConnection.java
java/stt/aws-sdk/src/main/resources/: logback.xml
java/stt/deepgram-sdk/: README.md  build.gradle  gradlew  settings.gradle
java/stt/deepgram-sdk/src/main/java/com/deepgram/loadtest/: DeepgramSdkLoadTest.java  SdkStreamingConnection.java
java/stt/deepgram-sdk/src/main/resources/: logback.xml
js-stt/: README.md  stt.file.ts  stt.microphone.ts
js-test/: README.md  package.json  test-all-voices.ts  tts.ts
python-flux/: README.md  flux_sdk.py  flux_stress.py  pyproject.toml
python-flux/e2e/: e2e_test_common.py  e2e_test_streaming.py
python-stt/: README.md  pyproject.toml  stt_microphone.py  stt_microphone_stress.py  stt_sdk.py  stt_wav_async.py  stt_wav_stress.py
python-stt/e2e/: e2e_test_batch.py  e2e_test_common.py  e2e_test_streaming.py
python-test/: README.md  requirements.txt  test_all_voices.py  tts.py
python-tts/: README.md  pyproject.toml  tts_sdk.py  tts_stress.py
python-tts/e2e/: e2e_test_batch.py  e2e_test_common.py  e2e_test_streaming.py
