[project]
name = "python-stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-sdk-sagemaker-runtime-http2==0.4.0",
    "boto3>=1.42.34",
    "deepgram-sagemaker>=0.2.2",
    "deepgram-sdk>=7.0.0",
    "pyaudio>=0.2.14",
]

