[project]
name = "python-tts"
version = "0.1.0"
description = "Deepgram SageMaker Text-to-Speech HTTP and streaming clients"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-sdk-sagemaker-runtime-http2",
    "boto3>=1.42.34",
    "deepgram-sagemaker>=0.2.2",
    "deepgram-sdk>=7.0.0",
    "pyaudio>=0.2.14",
]

# [tool.uv.sources]
# aws-sdk-sagemaker-runtime-http2 = { git = "https://github.com/awslabs/aws-sdk-python", subdirectory = "clients/aws-sdk-sagemaker-runtime-http2" }
